[project]
name = "biblestudy-agentic-rag"
version = "0.1.0"
description = "AIE5 midterm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search==5.3.1b1",
    "jupyter>=1.1.1",
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.67",
    "chainlit>=2.0.4",
    "pandas>=2.2.3",
    "langchain-qdrant>=0.2.0",
    "langchain-cohere>=0.4.2",
    "unstructured>=0.14.8",
]
